<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:background="@color/backgroundApp"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/etDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/HintAddTask"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbStudy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorStudy"
            android:checked="true"
            android:text="@string/Study"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorWork"
            android:text="@string/Work"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbHealt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorHealt"
            android:text="@string/Healt"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorHouse"
            android:text="@string/House"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorOther"
            android:text="@string/Other"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/item_task"
        android:text="@string/createTask" />

</LinearLayout>