<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/HintLoginU"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/HintLoginP"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/buttonIngr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorOther"
            android:text="@string/textButtonLogin" />

    </LinearLayout>


</FrameLayout>
